// 由于使用optional，所以protoc需要使用3.15以上版本
syntax = "proto3";
package orion;

import "google/protobuf/timestamp.proto";

message Vocabulary{
    /// id
    int64 id = 1;
    /// 单词
    string word = 2;
    /// 音标
    string soundmark = 3;
    /// 词根
    string roots = 4;
    /// 释义
    string paraphrase = 5;
    /// 词组
    string collocations = 6;
    /// 同义词
    string synonyms = 7;
    /// 例句
    string examples = 8;

    /// 创建时间
    google.protobuf.Timestamp created_at = 9;
    /// 更新时间
    google.protobuf.Timestamp updated_at = 10;
}

message VocabularyQuery {
    /// id
    optional int64 id = 1;
    /// 单词
    optional string word = 2;
    /// 音标
    optional string soundmark = 3;
    /// 词根
    optional string roots = 4;
    /// 释义
    optional string paraphrase = 5;
    /// 词组
    optional string collocations = 6;
    /// 同义词
    optional string synonyms = 7;
    /// 例句
    optional string examples = 8;
    /// offset
    optional int64 offset = 9;
    /// limit
    optional int64 limit = 10;
}

// add a new vocabulary
message AddVocabularyRequest {
    Vocabulary vocabulary = 1;
}

message VocabularyResponse {
    Vocabulary vocabulary = 1;
}

message QueryVocabularyRequest {
    VocabularyQuery query = 1;
}

message QueryVocabularyResponse {
    repeated Vocabulary vocabulary = 1;
}

message QueryVocabularyRandomRequest {
    int64 limit = 1;
}

// The Vocabulary service definition.
service VocabularyService {
    // add a new vocabulary
    rpc AddVocabulary(AddVocabularyRequest) returns (VocabularyResponse) {}
    // query vocabulary
    rpc QueryVocabulary(QueryVocabularyRequest) returns (QueryVocabularyResponse) {}
    // query random vocabulary
    rpc QueryVocabularyRandom(QueryVocabularyRandomRequest) returns (QueryVocabularyResponse) {}

}

message Story {
    /// id
    int64 id = 1;
    /// words
    repeated string words = 2;
    /// content
    string content = 3;
    /// read count
    int64 read_count = 4;
    /// created at
    google.protobuf.Timestamp created_at = 5;
    /// updated at
    google.protobuf.Timestamp updated_at = 6;
}

message StoryQuery {
    /// id
    optional int64 id = 1;
    /// words
    optional string words = 2;
    /// content
    optional string content = 3;
    /// read count
    optional int64 read_count = 4;
    /// offset
    optional int64 offset = 5;
    /// limit
    optional int64 limit = 6;
}

message AddStoryRequest {
    Story story = 1;
}

message StoryResponse {
    Story story = 1;
}

message QueryStoryResponse {
    repeated Story story = 1;
}

service StoryService {
    // add a new story
    rpc AddStory(AddStoryRequest) returns (StoryResponse) {}
}

enum LearnStatus {
    LEARN_STATUS_NEW = 0;
    LEARN_STATUS_EASY = 1;
    LEARN_STATUS_DIFFICULT = 2;
    LEARN_STATUS_LEARNED = 3;
}

message LearnWord {
    /// id
    int64 id = 1;
    /// word
    string word = 2;
    /// vocabulary id
    int64 vocabulary_id = 3;
    /// word list id
    int64 word_list_id = 4;
    /// learn count
    int64 learn_count = 5;
    /// learn status
    LearnStatus learn_status = 6;
    /// last learned at
    google.protobuf.Timestamp last_learned_at = 7;
    /// next learn at
    google.protobuf.Timestamp next_learn_at = 8;
    /// created at
    google.protobuf.Timestamp created_at = 9;
    /// updated at
    google.protobuf.Timestamp updated_at = 10;
}

message LearnWordQuery {
    /// id
    optional int64 id = 1;
    /// word
    optional string word = 2;
    /// vocabulary id
    optional int64 vocabulary_id = 3;
    /// word list id
    optional int64 word_list_id = 4;
    /// learn count
    optional int64 learn_count = 5;
    /// learn status
    optional LearnStatus learn_status = 6;
    /// last learned at
    google.protobuf.Timestamp last_learned_at = 7;
    /// next learn at
    google.protobuf.Timestamp next_learn_at = 8;
    /// offset
    optional int64 offset = 9;
    /// limit
    optional int64 limit = 10;
}

message AddLearnWordRequest {
    LearnWord word = 1;
}

message LearnWordResponse {
    LearnWord word = 1;
}

message QueryLearnWordRequest {
    LearnWordQuery query = 1;
}

message QueryLearnWordResponse {
    repeated LearnWord word = 1;
}

service LearnWordService {
    // add a new learn word
    rpc AddLearnWord(AddLearnWordRequest) returns (LearnWordResponse) {}
    // query learn word
    rpc QueryLearnWord(QueryLearnWordRequest) returns (QueryLearnWordResponse) {}
}

enum WordClassification {
    CET4 = 0;
    CET6 = 1;
    JUNIOR = 2;
    SENIOR = 3;
    GRADUATE = 4;
    TOEFL = 5;
    SAT = 6;
    UNKOWN = 7;
}

message WordList {
    /// id
    int64 id = 1;
    /// name
    string word = 2;
    /// paraphrase
    string paraphrase = 3;
    /// word classification
    WordClassification classification = 4;
    /// created at
    google.protobuf.Timestamp created_at = 5;
    /// updated at
    google.protobuf.Timestamp updated_at = 6;
}

message WordListQuery {
    /// id
    optional int64 id = 1;
    /// name
    optional string word = 2;
    /// paraphrase
    optional string paraphrase = 3;
    /// word classification
    optional WordClassification classification = 4;
    /// offset
    optional int64 offset = 5;
    /// limit
    optional int64 limit = 6;
}

message AddWordListRequest {
    WordList word = 1;
}

message WordListResponse {
    WordList word = 1;
}

message QueryWordListRequest {
    WordListQuery query = 1;
}

message QueryWordListResponse {
    repeated WordList word = 1;
}

service WordListService {
    // add a new word list
    rpc AddWordList(AddWordListRequest) returns (WordListResponse) {}
    // query word list
    rpc QueryWordList(QueryWordListRequest) returns (QueryWordListResponse) {}
}
